--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "expo-av": "^7.0.1",
     "expo-camera": "^7.0.0",
     "native-base": "^2.13.8",
+    "node": "^10.13.0",
+    "npm": "^6.13.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
@@ -20,7 +22,9 @@
     "react-native-unimodules": "0.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
