--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
     "expo-camera": "^7.0.0",
+    "firebase": "^7.5.2",
     "native-base": "^2.13.8",
     "node": "^10.13.0",
     "npm": "^6.13.2",
